--- a/Views/MyDefault/Index.cshtml
+++ b/Views/MyDefault/Index.cshtml
@@ -2,27 +2,30 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Контракты</title>
-    <link href="~/css/stylecss.css" rel="stylesheet" />
-    <script src="~/ts/scripts.js"></script>
+    <title>Контакты</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <p class="fontStyle">
-
-        <table border="1">
-            @foreach(var e in Model)
-        {
-            <tr>
-                <td><a href="/Details/Details?id=@e.Id">@e.Id</a></td>
-                <td><p>@e.Surname</p></td>
-                <td><p>@e.Name</p></td>
-                <td><p>@e.Patronymic</p></td>
-                <td><p>+@e.PhoneNumber</p></td>
-                <td><p>@e.Address</p></td>
-            </tr>
-        }
-        </table>
-
-    </p>
+<h1 class="h1">Контакты</h1>
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Имя</th>
+            <th scope="col">Номер телефона</th>
+        </tr>
+    </thead>
+    <tbody>
+    @foreach (var e in Model)
+    {
+        <tr>
+            <th scope="row"><a href="/Details/Details?id=@e.Id">@e.Id</a></th>
+            <td>@e.Name @e.Surname</td>
+            <td>+@e.PhoneNumber</td>
+        </tr>
+    }
+    </tbody>
+</table>
 </body>
 </html>
