--- a/Phone_book/Phone_book/Views/Home/Add.cshtml
+++ b/Phone_book/Phone_book/Views/Home/Add.cshtml
@@ -1,12 +1,4 @@
-﻿<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>Новый контакт</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
-<body>
-
-<form action="~/Home/GetDataFromViewField" method="post">
+﻿<form action="~/Home/GetDataFromViewField" method="post">
     <div class="form-group">
         <label for="inputName">Имя</label>
         <div class="col-sm-10">
@@ -42,6 +34,3 @@
         </div>
     </div>
 </form>
-     
-</body>
-</html>
