Добавил страницу входа

--- a/Phone_book/Views/Shared/_Layout.cshtml
+++ b/Phone_book/Views/Shared/_Layout.cshtml
@@ -7,18 +7,15 @@
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
 </head>
 <body>
     <header>
         <a asp-controller="Home" asp-action="Index">Домой</a>
         <a asp-controller="Home" asp-action="Add">Новый контакт</a>
+        <a asp-controller="Login" asp-action="Index">Вход</a>
     </header>
     <div id="main">
         @RenderBody()
     </div>
-    <footer>
-        Здесь не будет футера!
-    </footer>
 </body>
 </html>
